--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
-    "@types/mysql": "^2.15.21"
+    "@types/mysql": "^2.15.21",
+    "dotenv": "^16.0.3"
   }
 }
