--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "copyfiles": "^2.4.1",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
-    "@types/mysql": "^2.15.21",
-    "dotenv": "^16.0.3"
+    "@types/mysql": "^2.15.21"
   }
 }
