--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "postinstall": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc && npm run html",
     "html": "copyfiles --up 1 src/public/*.html dist"
   },
   "author": "",
